--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
   },
   "homepage": "https://github.com/htmlacademy-adaptive/2304-mishka",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "0.0.7",
     "autoprefixer": "6.4.1",
+    "css-mqpacker": "^5.0.1",
     "grunt": "1.0.1",
     "grunt-browser-sync": "2.2.0",
-    "grunt-contrib-less": "1.4.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-watch": "1.0.0",
+    "grunt-csso": "^2.0.1",
     "grunt-postcss": "0.8.0",
-    "@htmlacademy/editorconfig-cli": "0.0.7"
+    "grunt-svgmin": "^4.0.0",
+    "load-grunt-tasks": "^3.5.2"
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "grunt less && grunt postcss",
+    "build": "grunt build",
     "start": "npm run build && grunt serve"
   },
   "editorconfig-cli": [
